FIX: Transition for header links on smaller devices

--- a/app/javascript/mi_locations/stylesheets/header.sass
+++ b/app/javascript/mi_locations/stylesheets/header.sass
@@ -12,7 +12,7 @@ header
     @apply text-um-maize-lighter no-underline
 
   @screen sm
-    @apply justify-around
+    @apply justify-between
 .header-links
   @apply flex flex-no-wrap
   a
